mobile spacing fix

--- a/style.sass
+++ b/style.sass
@@ -15,7 +15,7 @@ $base: #1D1C1D
 $blue: #4100FF
 $pink: #E84A67
 $spacing-S: 48px
-$spacing-XS: 30px
+$spacing-XS: 19px
 $breakpoint: 960px
 $breakpoint-S: $breakpoint / 2
 
@@ -71,7 +71,7 @@ header
     margin-top: 1.5 * $spacing-S
     margin-bottom: 0.5 * $spacing-S
     @media only screen and (max-width: $breakpoint)
-        margin-top: 1.25 * $spacing-S
+        margin-top: 1 * $spacing-S
     h1
         position: relative
         width: 148px
@@ -147,7 +147,7 @@ iframe, embed
     margin-top: $spacing-S
     // margin-bottom: $spacing-S
     @media only screen and (max-width: $breakpoint)
-        margin-top: $spacing-XS
+        margin-top: 1.5 * $spacing-XS
         // margin-bottom: $spacing-XS
 .artist-info_bio
     padding-left: $spacing-S
